migrate to javalin + thymeleaf